# jan

./: .gitignore  README.md  pyproject.toml  report.md
src/jan/: crew.py  main.py
src/jan/config/: agents.yaml  tasks.yaml
